[package]
name = "onionbell"
version = "0.1.0"
edition = "2024"
description = "A bell utility for Hyprland"
license-file = "LICENSE"
repository = "https://codeberg.org/onion27/onionbell"

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
regex = "1.12.2"
rodio = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_regex = "1.1.0"
thiserror = "2.0.17"
toml = "0.9.11"

[profile.release]
opt-level = 3
strip = true
lto = true
